--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ h6 {
 --------------------------------------------------------------*/
 /* Desktop Navigation */
 .nav-menu {
-  padding: 30px 0 0 0;
+  padding: 0px 0 0 0;
 }
 
 .nav-menu * {
@@ -244,6 +244,19 @@ h6 {
   background: url("../img/k6.jpg") top center;
   background-size: cover;
 }
+@media only screen and (max-width: 768px) {
+  #hero {
+    background: url("../img/k01.jpg") top center;
+    background-size: cover;
+    object-fit: cover;
+  }
+  #hero .hero-container {
+  position: relative;
+  z-index: 2;
+  min-width: 300px;
+}
+
+}
 
 #hero:before {
   content: "";
@@ -294,6 +307,12 @@ h6 {
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
+    margin-top: -280px;
+    margin-left: 50px;
+  }
+  #hero p {
+  
+    margin-left: 50px;
   }
 
   #hero h2 {
@@ -913,6 +932,8 @@ section {
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
+.contact .info .instagram:hover i,
+.contact .info .linkedin:hover i,
 .contact .info .phone:hover i {
   background: #149ddd;
   color: #fff;
