--- a/assets/css/additional_style.css
+++ b/assets/css/additional_style.css
@@ -1,39 +1,40 @@
+.card-img-top {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .card {
   position: relative;
   width: 100%;
-  height: 400px; /* Adjust the height as needed */
+  height: 400px;
   perspective: 1000px;
 }
 
-.card .card-inner {
+.card-inner {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
   transition: transform 0.8s;
 }
-.card .card-inner:hover,
+
+.card:hover .card-inner,
 .card.flip .card-inner {
   transform: rotateY(180deg);
 }
-  
-  .card-front,
-  .card-back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-  }
-  
-  .card-back {
-    transform: rotateY(180deg);
-  }
 
-  .card-img-top {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* This ensures the image covers the entire area of the element */
-  }
-  
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
 .card-body {
   padding: 20px;
 }
@@ -44,7 +45,7 @@
 }
 
 .card-text {
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 20px;
 }
 
@@ -55,6 +56,3 @@
 .card:hover .btn {
   display: block;
 }
-
-
-
