--- a/assets/css/additional_style.css
+++ b/assets/css/additional_style.css
@@ -56,3 +56,18 @@
 .card:hover .btn {
   display: block;
 }
+
+.map-responsive-wrapper {
+  overflow: hidden;
+  padding-bottom: 56.25%; /* Aspect ratio (height:width ratio) for 16:9 display */
+  position: relative;
+  height: 0;
+}
+
+.map-responsive-wrapper iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
