--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,14 @@ h6 {
   cursor: pointer;
 }
 
+.mobile-nav-logo {
+  position: fixed;
+  left: 15px;
+  top: 15px;
+  z-index: 9999; /* Make sure it's above the toggle button */
+  width: 40px;
+  height: 40px;
+}
 .mobile-nav-active {
   overflow: hidden;
 }
